app/public/wp-content/themes/lgl-theme/CSS/front-page.css
div.front-page-container {
  width: 100vw;
  display: flex;
  flex-direction: column;
  height: 100vh;
  justify-content: span;
  overflow-y: auto;
  overflow-x: hidden;
}

section.header-container {
  width: 100%;
  min-height: 20vh;
  max-height: 200px;
}

section.body-container {
  max-width: 100%;
  display: flex;
  justify-content: flex-start;
  flex-direction: column;
}

div.aboutus-container {
  height: max-content;
  width: 100%;
  display: flex;
  flex-direction: column;
  padding-left: 10%;
  padding-right: 10%;
  padding-bottom: 5%;
  gap: 12px;
  color: var(--light);
}

h1.aboutus {
  text-align: center;
  font-size: 3vw;
  width: 100%;
}

section.aboutus {
  display: flex;
  gap: 25%;
}

p.aboutus {
  font-size: 1.8vw;
  font-weight: 600;
}

div.services-container {
  width: 100%;
  height: max-content;
  padding-top: 20px;
  padding-left: 15%;
  padding-right: 15%;
  padding-bottom: 5%;
  text-align: left;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  background-color: var(--grey);
  color: var(--light);
}

section.services-first {
  margin-bottom: 20px;
}

h1.services {
  font-size: 3vw;
  font-weight: bolder;
  text-align: center;
  margin-bottom: 10px;
}

p.services {
  font-size: 1.5vw;
  font-weight: 500;
  text-align: left;
  text-indent: 5px;
}

h2.services {
  font-size: 2vw;
  font-weight: 800;
  text-align: left;
  margin-bottom: 10px;
}

ul.services {
  font-size: 1.3vw;
  font-weight: 700;
  text-align: left;
  list-style-type: square;
  list-style: none;
  padding: 0;
  margin-left: 5%;
}

ul.services > li::before {
  content: "\2023";
  /* Unicode for a bullet point */
  color: var(--light);
  display: inline-block;
  width: 1em;
  margin-left: -1em;
}

ul.services > li {
  margin-top: 20px;
}

section.footer-container {
  width: 100vw;
  height: 15vh;
  max-height: 100px;
}

@media screen and (max-device-width:430px) {
  div.aboutus-container {
    padding-left: 5%;
    padding-right: 5%;
    max-height: min-content;
  }

  div.aboutus-container.aboutus-background::before {
    background-size: contain;
    background-position: 90% 0 !important;
  }

  h1.aboutus {
    font-size: 5vw;
    font-weight: 900;
  }

  p.aboutus {
    font-size: 3.8vw;
    line-height: 20px;
  }

  div.services-container {
    padding-left: 5%;
    padding-right: 5%;
    padding-bottom: 5%;
    min-height: min-content;
  }

  h1.services {
    font-size: 5vw;
  }

  p.services {
    font-size: 4vw;
    line-height: 25px;
  }

  h2.services {
    font-size: 3.5vw;
  }

  ul.services {
    font-size: 3vw;
  }
}

